--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/back"
-        android:id="@+id/relativeLayout">
+        android:id="@+id/linearLayout">
 
         <TextView
             android:id="@+id/textView"
