--- a/app/src/main/res/layout/activity_weather_now.xml
+++ b/app/src/main/res/layout/activity_weather_now.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
     <com.qiushui.blurredview.BlurredView
         android:id="@+id/yahooweather_blurredview"
-        app:src="@mipmap/bg02"
+        app:src="@mipmap/bg09"
         app:move="true"
         app:disableBlurred="false"
         android:layout_width="match_parent"
@@ -19,7 +19,7 @@
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
-           android:id="@+id/relativeLayout">
+           android:id="@+id/linearLayout">
            <android.support.v7.widget.Toolbar
                android:id="@+id/yahooweather_toolbar"
                android:layout_width="match_parent"
@@ -71,7 +71,7 @@
 
        <android.support.v7.widget.RecyclerView
            android:id="@+id/yahooweather_recyclerview"
-           android:layout_below="@id/relativeLayout"
+           android:layout_below="@id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
 
