--- a/app/src/main/res/layout/rv_astronomy.xml
+++ b/app/src/main/res/layout/rv_astronomy.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/relativeLayout"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="220dp"
     android:layout_alignParentLeft="true"
