--- a/app/src/main/res/layout/rv_forecast.xml
+++ b/app/src/main/res/layout/rv_forecast.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:wcv="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/relativeLayout"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
-    android:layout_height="280dp"
+    android:layout_height="310dp"
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
     android:layout_below="@+id/weather"
@@ -39,6 +39,8 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_centerInParent="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:background="#18ffffff"
         wcv:textColor="@android:color/white"
         wcv:textSize="14sp" />
@@ -46,6 +48,8 @@
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:background="#18ffffff">
 
         <LinearLayout
@@ -208,7 +212,36 @@
                 android:layout_gravity="center_horizontal"
                 android:text="19°/20°"
                 android:textColor="#fff" />
+
         </LinearLayout>
+    </TableRow>
+
+    <TableRow
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="18dp">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="5天"
+            android:textColor="#fff" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" | "
+            android:textColor="#fff" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="10天"
+            android:textColor="#bcb9b9" />
     </TableRow>
 
 
