--- a/app/src/main/res/layout/activity_uvi.xml
+++ b/app/src/main/res/layout/activity_uvi.xml
@@ -39,7 +39,7 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="UVI"
+            android:text="UV"
             android:textColor="#fff"
             android:textSize="30sp"
             android:textStyle="bold"
@@ -51,22 +51,22 @@
             android:layout_marginRight="29dp" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/tvCity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="11dp"
+            android:layout_marginTop="9dp"
             android:text="台南市"
             android:textColor="#fff"
             android:textSize="50sp"
-            tools:layout_constraintTop_creator="1"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintBottom_creator="1"
             app:layout_constraintBottom_toBottomOf="@+id/textView3"
+            app:layout_constraintLeft_toRightOf="@+id/relativelatout"
             app:layout_constraintRight_toRightOf="@+id/imageView3"
-            android:layout_marginTop="9dp"
-            tools:layout_constraintLeft_creator="1"
-            android:layout_marginBottom="11dp"
             app:layout_constraintTop_toTopOf="@+id/textView2"
-            app:layout_constraintLeft_toRightOf="@+id/relativelatout" />
+            tools:layout_constraintBottom_creator="1"
+            tools:layout_constraintLeft_creator="1"
+            tools:layout_constraintRight_creator="1"
+            tools:layout_constraintTop_creator="1" />
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/relativelatout"
@@ -82,7 +82,7 @@
             tools:layout_constraintLeft_creator="1">
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/tvStr"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
@@ -91,13 +91,13 @@
                 android:textSize="28sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView9"
+                app:layout_constraintTop_toBottomOf="@+id/tvUv"
                 tools:layout_constraintLeft_creator="1"
                 tools:layout_constraintRight_creator="1"
                 tools:layout_constraintTop_creator="1" />
 
             <TextView
-                android:id="@+id/textView9"
+                android:id="@+id/tvUv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="8"
@@ -163,7 +163,7 @@
             android:layout_marginRight="44dp" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/tvSiteName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="測站: 台南"
@@ -171,34 +171,34 @@
             tools:layout_constraintTop_creator="1"
             android:layout_marginTop="20dp"
             tools:layout_constraintLeft_creator="1"
-            app:layout_constraintLeft_toLeftOf="@+id/textView12"
+            app:layout_constraintLeft_toLeftOf="@+id/tvLocation"
             app:layout_constraintTop_toTopOf="@+id/constraintLayout" />
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/tvLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="您目前位置為: 歸仁"
             android:textSize="15sp"
             tools:layout_constraintTop_creator="1"
             android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView6"
+            app:layout_constraintTop_toBottomOf="@+id/tvSiteName"
             tools:layout_constraintLeft_creator="1"
-            app:layout_constraintLeft_toLeftOf="@+id/textView10" />
+            app:layout_constraintLeft_toLeftOf="@+id/tvPublishAgency" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/tvPublishAgency"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="發布機關: 中央氣象局"
             android:textSize="15sp"
             tools:layout_constraintTop_creator="1"
             android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView12"
+            app:layout_constraintTop_toBottomOf="@+id/tvLocation"
             tools:layout_constraintLeft_creator="1"
-            app:layout_constraintLeft_toLeftOf="@+id/textView11" />
+            app:layout_constraintLeft_toLeftOf="@+id/tvPublishTime" />
 
         <TextView
-            android:id="@+id/textView11"
+            android:id="@+id/tvPublishTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"
@@ -206,7 +206,7 @@
             tools:layout_constraintTop_creator="1"
             android:layout_marginStart="28dp"
             android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView10"
+            app:layout_constraintTop_toBottomOf="@+id/tvPublishAgency"
             tools:layout_constraintLeft_creator="1"
             app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
             android:layout_marginLeft="28dp" />
