--- a/app/src/main/res/layout/activity_uvi.xml
+++ b/app/src/main/res/layout/activity_uvi.xml
@@ -61,19 +61,17 @@
             android:textSize="50sp"
             app:layout_constraintBottom_toBottomOf="@+id/textView3"
             app:layout_constraintLeft_toRightOf="@+id/relativelatout"
-            app:layout_constraintRight_toRightOf="@+id/imageView3"
             app:layout_constraintTop_toTopOf="@+id/textView2"
             tools:layout_constraintBottom_creator="1"
             tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintRight_creator="1"
             tools:layout_constraintTop_creator="1" />
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/relativelatout"
             android:layout_width="130dp"
             android:layout_height="180dp"
-            android:layout_marginBottom="66dp"
-            android:layout_marginLeft="37dp"
+            android:layout_marginBottom="53dp"
+            android:layout_marginLeft="40dp"
             android:layout_marginStart="40dp"
             android:background="#1effffff"
             app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
@@ -118,13 +116,13 @@
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/constraintLayout"
-            android:layout_width="0dp"
-            android:layout_height="150dp"
+            android:layout_width="287dp"
+            android:layout_height="157dp"
             android:layout_marginBottom="26dp"
-            android:layout_marginEnd="37dp"
-            android:layout_marginLeft="37dp"
-            android:layout_marginRight="37dp"
-            android:layout_marginStart="37dp"
+            android:layout_marginEnd="47dp"
+            android:layout_marginLeft="47dp"
+            android:layout_marginRight="47dp"
+            android:layout_marginStart="47dp"
             android:background="@drawable/round_box2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -132,92 +130,97 @@
             app:layout_constraintRight_toRightOf="parent"
             tools:layout_constraintBottom_creator="1"
             tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintRight_creator="1">
+            tools:layout_constraintRight_creator="1"
+            tools:layout_editor_absoluteX="50dp"
+            tools:layout_editor_absoluteY="384dp">
 
             <TextView
-                android:id="@+id/textView8"
+                android:id="@+id/tvSiteName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="78dp"
-                android:layout_marginStart="78dp"
-                android:layout_marginTop="267dp"
-                android:text="TextView"
+                android:layout_marginTop="20dp"
+                android:text="測站: 台南"
+                android:textColor="#231e31"
+                android:textSize="15sp"
+                app:layout_constraintLeft_toLeftOf="@+id/tvLocation"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:layout_constraintLeft_creator="1"
+                tools:layout_constraintTop_creator="1" />
+
+            <TextView
+                android:id="@+id/tvLocation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="您目前位置為: 歸仁"
+                android:textColor="#231e31"
+                android:textSize="15sp"
+                app:layout_constraintLeft_toLeftOf="@+id/tvPublishAgency"
+                app:layout_constraintTop_toBottomOf="@+id/tvSiteName"
+                tools:layout_constraintLeft_creator="1"
+                tools:layout_constraintTop_creator="1" />
+
+            <TextView
+                android:id="@+id/tvPublishTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="28dp"
+                android:layout_marginStart="28dp"
+                android:layout_marginTop="12dp"
+                android:textColor="#231e31"
+                android:text="發布時間: 2017-04-21 13:30"
+                android:textSize="15sp"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvPublishAgency"
+                tools:layout_constraintLeft_creator="1"
+                tools:layout_constraintTop_creator="1" />
+
+            <TextView
+                android:id="@+id/tvPublishAgency"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="發布機關: 中央氣象局"
+                android:textColor="#231e31"
+                android:textSize="15sp"
+                app:layout_constraintLeft_toLeftOf="@+id/tvPublishTime"
+                app:layout_constraintTop_toBottomOf="@+id/tvLocation"
                 tools:layout_constraintLeft_creator="1"
                 tools:layout_constraintTop_creator="1" />
         </android.support.constraint.ConstraintLayout>
 
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="123dp"
-            android:layout_height="92dp"
-            app:srcCompat="@mipmap/sunglasses"
-            tools:layout_constraintTop_creator="1"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintBottom_creator="1"
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="150dp"
+            android:layout_height="180dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="17dp"
+            android:layout_marginStart="17dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/round_box2"
             app:layout_constraintBottom_toBottomOf="@+id/relativelatout"
-            android:layout_marginEnd="44dp"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/relativelatout"
             app:layout_constraintTop_toTopOf="@+id/relativelatout"
-            android:layout_marginRight="44dp" />
+            tools:layout_constraintBottom_creator="1"
+            tools:layout_constraintLeft_creator="1"
+            tools:layout_constraintTop_creator="1">
 
-        <TextView
-            android:id="@+id/tvSiteName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="測站: 台南"
-            android:textSize="15sp"
-            tools:layout_constraintTop_creator="1"
-            android:layout_marginTop="20dp"
-            tools:layout_constraintLeft_creator="1"
-            app:layout_constraintLeft_toLeftOf="@+id/tvLocation"
-            app:layout_constraintTop_toTopOf="@+id/constraintLayout" />
-        <TextView
-            android:id="@+id/tvLocation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="您目前位置為: 歸仁"
-            android:textSize="15sp"
-            tools:layout_constraintTop_creator="1"
-            android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvSiteName"
-            tools:layout_constraintLeft_creator="1"
-            app:layout_constraintLeft_toLeftOf="@+id/tvPublishAgency" />
-
-        <TextView
-            android:id="@+id/tvPublishAgency"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="發布機關: 中央氣象局"
-            android:textSize="15sp"
-            tools:layout_constraintTop_creator="1"
-            android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvLocation"
-            tools:layout_constraintLeft_creator="1"
-            app:layout_constraintLeft_toLeftOf="@+id/tvPublishTime" />
-
-        <TextView
-            android:id="@+id/tvPublishTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:text="發布時間: 2017-04-21 13:30"
-            tools:layout_constraintTop_creator="1"
-            android:layout_marginStart="28dp"
-            android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvPublishAgency"
-            tools:layout_constraintLeft_creator="1"
-            app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
-            android:layout_marginLeft="28dp" />
+            <TextView
+                android:id="@+id/tvSuggest"
+                android:layout_width="137dp"
+                android:layout_height="90dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="5dp"
+                android:text="帽子/陽傘+防曬液+太陽眼鏡+陰涼處+長袖衣物,上午十時至下午二時最好不外出"
+                android:textColor="#383737"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.576"
+                tools:layout_constraintBottom_creator="1"
+                tools:layout_constraintLeft_creator="1"
+                tools:layout_constraintTop_creator="1" />
+        </android.support.constraint.ConstraintLayout>
 
     </android.support.constraint.ConstraintLayout>
-    <FrameLayout
-        android:id="@+id/main_frame"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
 
 </RelativeLayout>
