--- a/app/src/main/res/layout/fragment_pm25.xml
+++ b/app/src/main/res/layout/fragment_pm25.xml
@@ -2,50 +2,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:custom="http://schemas.android.com/apk/res-auto"
-    tools:context="com.openweather.openweather.AirActuvuty.PM25Fragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.openweather.openweather.AirActuvuty.AQIFragment"
+    android:background="#efeac3">
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#f2e6c8">
+        android:layout_height="match_parent">
 
-        <com.github.lzyzsd.circleprogress.ArcProgress
-            android:id="@+id/arc_progress"
-            android:layout_width="180dp"
-            android:layout_height="180dp"
-            custom:arc_bottom_text="PM2.5"
-            custom:arc_bottom_text_size="20dp"
-            custom:arc_finished_color="#1561bf"
-            custom:arc_max="90"
-            custom:arc_progress="54"
-            custom:arc_stroke_width="6dp"
-            custom:arc_suffix_text=" μg/m3"
-            custom:arc_suffix_text_padding="17dp"
-            custom:arc_text_size="70dp"
-            custom:arc_unfinished_color="#fff" />
+        <com.anderson.dashboardview.view.DashboardView
+            android:id="@+id/dashboardView"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:scrollbarFadeDuration="220"
+            android:text="細懸浮微粒"
+            android:textSize="11dp"
+            app:backgroundColor="#cef5f5f5"
+            app:centerCircleColor="@color/colorPrimary"
+            app:endProgressColor="@color/RED"
+            app:maxNumber="10"
+            app:progressStrokeWidth="16dp"
+            app:startNumber="0"
+            app:startProgressColor="@color/GREEN"
+            app:tikeStrArray="@array/meter"
+            app:tikeStrColor="@color/colorAccent"
+            app:tikeStrSize="10dp"
+            app:unit="ug/m3" />
 
         <TextView
             android:id="@+id/tvPM25"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="22dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="23dp"
             android:text="細懸浮微粒\nPM2.5"
             android:textSize="30sp"
             android:layout_alignParentTop="true"
-            android:layout_alignRight="@+id/textView"
-            android:layout_alignEnd="@+id/textView" />
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
 
         <RelativeLayout
             android:id="@+id/relativeLayout2"
             android:layout_width="110dp"
             android:layout_height="50dp"
-            android:background="@drawable/round_box_air3"
-            android:layout_marginRight="18dp"
-            android:layout_marginEnd="18dp"
+            android:layout_marginTop="25dp"
+            android:background="@drawable/round_box_air1"
             android:layout_below="@+id/tvPM25"
-            android:layout_alignRight="@+id/tvPM25"
-            android:layout_alignEnd="@+id/tvPM25"
-            android:layout_marginTop="18dp">
+            android:layout_alignRight="@+id/textView"
+            android:layout_alignEnd="@+id/textView">
 
             <TextView
                 android:id="@+id/tvStr"
@@ -53,25 +58,10 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:text="高"
+                android:text="普 通"
                 android:textColor="#0d0d0d"
                 android:textSize="20dp" />
         </RelativeLayout>
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="330dp"
-            android:layout_height="100dp"
-            android:layout_weight="1"
-            android:background="@drawable/bg_round_rect"
-            android:gravity="center_vertical"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:textColor="#222123"
-            android:text="一般民眾活動建議:\n\n任何人如果有不適，如眼痛，咳嗽或喉嚨痛等，應該考慮減少戶外活動。"
-            android:textStyle="bold"
-            android:layout_marginTop="34dp"
-            android:layout_below="@+id/relativeLayout2"
-            android:layout_centerHorizontal="true" />
 
         <TextView
             android:id="@+id/textView2"
@@ -91,6 +81,22 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/textView"
+            android:layout_width="330dp"
+            android:layout_height="100dp"
+            android:layout_below="@+id/dashboardView"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="13dp"
+            android:layout_weight="1"
+            android:background="@drawable/bg_round_rect"
+            android:gravity="center_vertical"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:text="一般民眾活動建議:\n\n任何人如果有不適，如眼痛，咳嗽或喉嚨痛等，應該考慮減少戶外活動。"
+            android:textColor="#222123"
+            android:textStyle="bold" />
+
+        <TextView
             android:id="@+id/tvPublishtime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -99,6 +105,6 @@
             android:layout_marginTop="15dp"
             android:text="最後更新時間2017-04-26 12:01"
             android:textSize="10sp" />
-    </RelativeLayout>
 
+    </RelativeLayout>
 </FrameLayout>
