--- a/app/src/main/res/layout/activity_uvi.xml
+++ b/app/src/main/res/layout/activity_uvi.xml
@@ -220,6 +220,15 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true">
+
+        <ImageView
+            android:id="@+id/ivBack"
+            android:layout_width="23dp"
+            android:layout_height="23dp"
+            android:layout_margin="9dp"
+            android:onClick="onBack"
+            app:srcCompat="@mipmap/back2" />
+    </FrameLayout>
 
 </RelativeLayout>
